--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 v2_CM_SSS_Data_Package/v2_CM_SSS_miniDOT_Data_and_Plots/v2_CM_SSS_miniDOT_Plots.pdf
+Maps/Figure1-Cluster_Map.pdf
+Maps/CB_catchments_clustered/CB_catchments_clean_joined.shp
