--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .Rhistory
 /SM_Inspecion_102924.xlsx
 /OLD_SSS_Water_Sediment_Total_Respiration_GPP.csv
+Figures/Maps/CB_catchments_clustered/CB_catchments_clean_joined.shp
