--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Published_Data/v3_SSS_Data_Package/Sensor_Data/miniDOT/Plots_and_Summary_Statist
 Published_Data/v3_SSS_Data_Package/Sensor_Data/miniDOTManualChamber/Plots_and_Summary_Statistics/v3_SSS_MC_Water_DO_Temp_TsPlot.pdf
 Published_Data/v3_SSS_Data_Package/SSS_Field_Protocol.pdf
 Published_Data/v3_SSS_Data_Package/v3_readme_SSS.pdf
+Figures/Maps/Figure6-Cluster_Map.pdf
