--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Published_Data/v3_SSS_Data_Package/Sensor_Data/miniDOTManualChamber/Plots_and_Su
 Published_Data/v3_SSS_Data_Package/SSS_Field_Protocol.pdf
 Published_Data/v3_SSS_Data_Package/v3_readme_SSS.pdf
 Figures/Maps/Figure6-Cluster_Map.pdf
+Figures/Map_Layers/CB_catchments_clustered/CB_catchments_clean_joined.shp
+Figures/Figure6_Cluster_Map.pdf
