Add RCM data and update script
.dat files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Published_Data/v3_SSS_Data_Package/v3_readme_SSS.pdf
 Figures/Maps/Figure6-Cluster_Map.pdf
 Figures/Map_Layers/CB_catchments_clustered/CB_catchments_clean_joined.shp
 Figures/Figure6_Cluster_Map.pdf
+Published_Data/Son_et_al_2022_Respiration_Data_Package/model_outputs/lat_annual.dat
+Published_Data/Son_et_al_2022_Respiration_Data_Package/model_outputs/vert_ann.dat
